--- a/src/components/ChatWindow.css
+++ b/src/components/ChatWindow.css
@@ -4,34 +4,29 @@
     flex-direction:column;
 }
 
-.chatWindowHeader {
+.chatWindow--header {
     height: 60px;
     display: flex;
     justify-content: space-between;
     
 }
 
-.chatWindowUserInfo {
+.chatWindow--info {
     display: flex;
     justify-content: space-between;
     height: 100%;
     padding: 10px;
 }
 
-.chatWindowUserInfo img {
+.chatWindow--info img {
     width: 50px;
     height: 50px;
     border-radius: 50%;
 }
-.chatWindowBody {
+.chatWindow--body {
     flex: 1;
     background: url('../assets/nature02.gif');
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-.chatWindowUserInfo {
-    display: flex;
-    justify-content: space-between;
 }
