--- a/src/App.css
+++ b/src/App.css
@@ -9,18 +9,25 @@ body {
 }
 
 .app-window {
-  display: flex;
+  width: 100vw;
   height: 100vh;
-  background-color: #EDEDED;
+  display: flex;
+  /* background-color: #EDEDED; */
+  background: url('./assets/nature02.gif');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .sidebar {
-  width: 35%;
+  width: 25%;
   height: 100vh;
   max-width: 415px;
   display: flex;
+  /* padding: 10px; */
   flex-direction: column;
-  border-right: 1px solid #DDD;
+  border-right: 1px solid rgba(0, 0, 0, .8);
+  background-color: rgba(0, 0, 0, .7);
 }
 
 header {
@@ -29,7 +36,8 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 0 15px;
-  background-color: lightgray;
+  background-color: rgba(0, 0, 0, .7);
+  /* background-color: lightgray; */
 
 }
 .header--avatar {
@@ -45,27 +53,36 @@ header {
 .header--btn {
   width: 40px;
   height: 40px;
-  margin: 0 2px;  
+  margin: 0 2px;
+  padding: 5px;  
   display: flex;
-  border-radius: 20px;
+  border-radius: 50%;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  background-color: darkgray;
+  transition: ease-in .3s;
+  /* background-color: darkgray; */
+}
+.header--btn:hover {
+  box-shadow: 0px 0px 7px 2px lightblue;
 }
 .search {
-  background-color: #F6F6F6;
-  border-bottom: 1px solid #EEE;
-  padding: 5px 15px;
+  background-color: rgba(0, 0, 0, .7);
+  /* border-bottom: 2px solid rgba(255, 255, 255, .3); */
+  /* border-radius: 10px; */
+  padding: 15px 15px;
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
 .search--input {
-  background-color: #FFF;
+  background-color: #F1F1F1;
   height: 40px;
   border-radius: 20px;
   display: flex;
   align-items: center;
-  padding: 0 10px;
+  padding: 10px 10px;
+  opacity: .8;
 }
 
 .search--input input {
@@ -78,7 +95,8 @@ header {
 
 .chatlist {
   flex: 1;
-  background-color: #FFF;
+  margin: 10px 0;
+  background-color: rgba(0, 0, 0, .6);
   overflow-y: auto;
 }
 
