--- a/src/components/ChatListItem.css
+++ b/src/components/ChatListItem.css
@@ -4,17 +4,21 @@
     display: flex;
     cursor: pointer;
     align-items: center;
-    margin: 10px 5px;
-    height: 70px;
+    margin: 20px 5px;
+    padding: 0 10px;
+    /* padding: 10px 0; */
+    height: 80px;
 }
-.chatListItem:hover {
-    background-color: #F5F5F5;
+.chatListItem:hover .chatListItem--lines{
+    border-top: 1px solid lightblue;
+    box-shadow: -2px 2px 10px 3px blue;
 }
 
 .chatListItem--avatar {
     width: 60px;
     border-radius: 50%;
-    margin-left: 15px;
+    /* margin-left: 15px; */
+    transition: .5s;
 }
 
 .chatListItem--lines {
@@ -26,8 +30,12 @@
     flex-wrap: wrap;
     min-width: 0;
     border-bottom: 1px solid #EEE;
-    padding-right: 15px;
+    /* padding-right: 15px; */
     margin-left:15px;
+    padding: 0 10px;
+    border-radius: 20px;
+    transition: easein .4s;
+    /* transition-duration: .4s; */
 }
 .chatListItem--line {
     display: flex;
@@ -38,7 +46,7 @@
 }
 .chatListItem--name {
     font-size: 17px;
-    color: #000;
+    color: #F1F1F1;
 }
 .chatListItem--date {
     font-size: 12px;
@@ -59,9 +67,19 @@
     margin: 0;
 }
 
-.chatListItem.active {
-    border: 2px solid green;
-    border-radius: 10px;
-    box-shadow: 5px 5px 2px rgba(0, 0, 0, .2);
+.chatListItem.active .chatListItem--avatar{
+    /* border: 2px solid green; */
+    /* border-radius: 10px; */
+    /* box-shadow: 5px 5px 2px rgba(0, 0, 0, .2); */
+    border: 4px solid lightgreen;
+    box-shadow: -2px 2px 10px 3px green;
+    width: 80px;
+    
+}
+
+.chatListItem.active .chatListItem--lines{
+    border-bottom: 2px solid lightgreen;
     outline: none;
+    box-shadow: -2px 2px 10px 3px green;
+    
 }
