--- a/src/components/ChatListItem.css
+++ b/src/components/ChatListItem.css
@@ -34,7 +34,8 @@
     margin-left:15px;
     padding: 0 10px;
     border-radius: 20px;
-    transition: easein .4s;
+    transition: easein .2s;
+    background-color: black;
     /* transition-duration: .4s; */
 }
 .chatListItem--line {
@@ -81,5 +82,6 @@
     border-bottom: 2px solid lightgreen;
     outline: none;
     box-shadow: -2px 2px 10px 3px green;
+    background-color: rgba(0, 0, 0, .8);
     
 }
