--- a/src/components/ChatWindow.css
+++ b/src/components/ChatWindow.css
@@ -1,7 +1,9 @@
 .chatWindow {
     height: 100vh;
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
+    justify-content: space-between;
+    /* display: block; */
 }
 
 
@@ -73,6 +75,36 @@
     align-items: center;
 }
 
+.chatWindow--body {
+    position: relative;
+    /* /* width: 100%; */
+    width: 100%;
+    height: 100%; 
+    overflow-y: auto;
+    overflow-x: hidden;
+    /* background-color: pink; */
+}
+
+.chatWindow--chatmsgsarea {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.chatWindow--emojiarea {
+    position: absolute;
+    bottom: 0px;
+    margin-left: 20px;
+}
+.EmojiPickerReact:before {
+    content: '';
+    width: 100%;
+    background-color: black;
+}
+
+
+
+
 .chatWindow--footer {
     height: 62px;
     display: flex;
@@ -104,46 +136,3 @@
     marign: 0 15px;
 }
 
-.chatWindow--body {
-    position: relative;
-    /* /* width: 100%; */
-    width: 100%;
-    height: 100%; 
-    overflow-y: auto;
-    overflow-x: hidden;
-    /* background-color: pink; */
-}
-.chatWindow--textarea {
-    position: absolute;
-    width: 100%;
-    height: 100%; 
-    
-}
-
-.chatWindow--emojiarea {
-    /* display: flex;
-    flex-direction: column;
-    justify-content: flex-end; */
-    /* height: auto; */
-    display: none;
-    width: 100%;
-    height: 100%; 
-    position: relative;
-    overflow-y: hidden;
-    margin-left: 20px;
-    z-index: 10;
-    /* margin-bottom: 200px; */
-    /* width: 100%; */
-    /* height: 100%; */
-}
-
-/* .EmojiPickerReact epr-main{
-    width:100%;
-} */
-
-.EmojiPickerReact.epr-main {
-    height: 100%;
-    /* margin-left: 20px; */
-     position: absolute;
-    /* height: 300px;   */
-}
