--- a/src/components/ChatWindow.css
+++ b/src/components/ChatWindow.css
@@ -75,8 +75,19 @@
     align-items: center;
 }
 
+
+.chatWindow--chatmsgsarea {
+    /* display: block; */
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
 .chatWindow--body {
     position: relative;
+    display: flex;
+    align-items: flex-end;
+    /* flex-direction: column; */
     /* /* width: 100%; */
     width: 100%;
     height: 100%; 
@@ -84,23 +95,42 @@
     overflow-x: hidden;
     /* background-color: pink; */
 }
-
-.chatWindow--chatmsgsarea {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
 .chatWindow--emojiarea {
-    position: absolute;
-    bottom: 0px;
-    margin-left: 20px;
+    /* bottom: 0px; */
+    /* width: 100%;*/
+    height: 100%;
+    display: flex;
+
+    justify-content: flex-start; 
+    /* self-align: flex-end; */
+    align-items: end;
+    position: relative;
+    overflow-y: hidden;
+    bottom: 10px;
+    margin-left: 40px;
+    z-index: 10;
+    transition: opacity .2s ease-in;
+
 }
-.EmojiPickerReact:before {
+
+
+
+aside.EmojiPickerReact.epr-main {
+    position: absolute;
+    background-color: rgba(0, 0, 0, .4);
+}
+
+
+/* .epr-search-container > input {
+    background-color: black;
+} */
+
+
+/* .EmojiPickerReact:before {
     content: '';
     width: 100%;
     background-color: black;
-}
+} */
 
 
 
@@ -135,4 +165,5 @@
     display: flex;
     marign: 0 15px;
 }
+
 
