--- a/src/components/ChatListItem.css
+++ b/src/components/ChatListItem.css
@@ -4,24 +4,24 @@
     display: flex;
     cursor: pointer;
     align-items: center;
-    margin: 20px 5px;
+    margin: 15px 5px;
     padding: 0 10px;
     /* padding: 10px 0; */
     height: 80px;
 }
 .chatListItem:hover .chatListItem--lines{
-    border-top: 1px solid lightblue;
-    box-shadow: -2px 2px 10px 3px blue;
+    background-color: rgba(0, 0, 0, .8);
 }
 
 .chatListItem--avatar {
     width: 60px;
     border-radius: 50%;
     /* margin-left: 15px; */
-    transition: .5s;
+    transition: .5s ease-in;
 }
 
 .chatListItem--lines {
+    box-shadow: 5px 5px 6px 1px rgba(0, 0, 0, .4);
     height: 100%;
     flex: 1;
     display: flex;
@@ -29,13 +29,13 @@
     justify-content: center;
     flex-wrap: wrap;
     min-width: 0;
-    border-bottom: 1px solid #EEE;
+    /* border-bottom: 1px solid #EEE; */
     /* padding-right: 15px; */
     margin-left:15px;
     padding: 0 10px;
-    border-radius: 20px;
-    transition: easein .2s;
-    background-color: black;
+    border-radius: 5px;
+    transition: .2s ease-in;
+    background-color: rgba(0, 0, 0, .5);
     /* transition-duration: .4s; */
 }
 .chatListItem--line {
@@ -72,16 +72,16 @@
     /* border: 2px solid green; */
     /* border-radius: 10px; */
     /* box-shadow: 5px 5px 2px rgba(0, 0, 0, .2); */
-    border: 4px solid lightgreen;
-    box-shadow: -2px 2px 10px 3px green;
+    border: 3px solid white;
+    box-shadow: -1px 2px 10px 2px lightblue;
     width: 80px;
     
 }
 
 .chatListItem.active .chatListItem--lines{
-    border-bottom: 2px solid lightgreen;
+    border-bottom: 2px solid lightblue;
     outline: none;
-    box-shadow: -2px 2px 10px 3px green;
+    box-shadow: 0 2px 6px 1px lightblue;
     background-color: rgba(0, 0, 0, .8);
     
 }
