--- a/src/components/ChatWindow.css
+++ b/src/components/ChatWindow.css
@@ -94,6 +94,15 @@
     padding: 20px 30px;
 }
 
+.chatWindow--body::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+  
+.chatWindow--body::-webkit-scrollbar-thumb {
+background-color: rgba(0, 0, 0, .2);
+}
+
 .chatWindow--body {
     position: relative;
     display: flex;
