--- a/src/components/NewChat.css
+++ b/src/components/NewChat.css
@@ -1,15 +1,19 @@
 .newChat {
-    width: 35%;
-    max-width: 415px;
-    position: fixed;
+    /* width: 100%%;
+    max-width: 315px;
+    position: fixed; */
+    position: relative;
+    width: 100%;
+    height: 100%;
     left:-415 ;
-    top: 0;
-    bottom: 0;
+    /* top: 0;
+    bottom: 0; */
     background-color: #FFF;
     display: flex;
     flex-direction: column;
     border-right: 1px solid #DDD;
     transition: all ease 1s;
+    z-index: 15;
 }
 
 .newChat--head {
