--- a/src/App.css
+++ b/src/App.css
@@ -95,7 +95,10 @@ header {
 }
 
 .chatlist {
-  flex: 1;
+  height: 100%;
+  /* flex: 1; */
+  display: flex;
+  flex-direction: column;
   /* padding: 10px 0; */
   background-color: rgba(0, 0, 0, .6);
   overflow-y: auto;
