--- a/src/components/NewChat.css
+++ b/src/components/NewChat.css
@@ -2,7 +2,7 @@
     /* width: 100%%;
     max-width: 315px;
     position: fixed; */
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
     left:-415 ;
