--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,10 @@ body {
   height: 100vh;
   display: flex;
   /* background-color: #EDEDED; */
-  background: url('./assets/rain.gif');
+  background: url('./assets/cityview.gif');
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 100% 100% ;
+  background-position: center 100% ;
 }
 
 .sidebar {
