basic components organization

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   height: 100vh;
   display: flex;
   /* background-color: #EDEDED; */
-  background: url('./assets/cityview.gif');
+  background: url('./assets/nature02.gif');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center 100% ;
@@ -36,7 +36,3 @@ body {
 
 
 
-.contentarea {
-  /* background-color: blue; */
-flex: 1;
-}
