--- a/src/components/ContentArea/ChatWindow/MessageItem/index.css
+++ b/src/components/ContentArea/ChatWindow/MessageItem/index.css
@@ -9,7 +9,7 @@
     box-shadow: 0 1px 1px #CCC;
     display: flex;
     flex-direction: column;
-    padding: 3px;
+    padding: 10px;
     max-width: 90%;
 }
 .messageText {
@@ -17,7 +17,7 @@
     margin: 5px 40px 5px 5px;
 }
 .messageDate {
-    font-size: 11;
+    font-size: .8rem;
     color: #999;
     margin-right: 5px;
     text-align: right;
